# calculator_mcp

./: .mcp.json  README.md  fastmcp.json  pyproject.toml
specs/: calculator-mcp-server-implementation.md  user_prompt.md
src/mcp_server/: server.py
src/mcp_server/models/: schemas.py
src/mcp_server/prompts/: financial_calculation_prompt.py  fitness_analytics_prompt.py  geometry_calculation_prompt.py  list_assets_prompt.py  loan_amortization_prompt.py  multiplication_table_prompt.py  probability_calculation_prompt.py  solve_equation_prompt.py  unit_conversion_prompt.py
src/mcp_server/tools/: add_tool.py  divide_tool.py  factorial_tool.py  mod_tool.py  multiply_tool.py  power_tool.py  root_tool.py  statistics_tool.py  subtract_tool.py
tests/test_prompts/: test_financial_calculation_prompt.py  test_fitness_analytics_prompt.py  test_geometry_calculation_prompt.py  test_list_assets_prompt.py  test_loan_amortization_prompt.py  test_multiplication_table_prompt.py  test_probability_calculation_prompt.py  test_solve_equation_prompt.py  test_unit_conversion_prompt.py
tests/test_tools/: test_add_tool.py  test_divide_tool.py  test_factorial_tool.py  test_mod_tool.py  test_multiply_tool.py  test_power_tool.py  test_root_tool.py  test_statistics_extended.py  test_statistics_server_tools.py  test_statistics_tool.py  test_subtract_tool.py
